--- a/yaml/test/book_cb.yaml
+++ b/yaml/test/book_cb.yaml
@@ -1,33 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: room
+  name: book
   namespace: myhotel
   labels:
-    app: room
+    app: book
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: room
+      app: book
   template:
     metadata:
       labels:
-        app: room
+        app: book
     spec:
       containers:
-        - name: room
-          image: 879772956301.dkr.ecr.ap-southeast-1.amazonaws.com/user11-room:latest
+        - name: book
+          image: 740569282574.dkr.ecr.ap-northeast-1.amazonaws.com/book:cb1
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-          resources:
-            limits:
-              memory: 256Mi
-              cpu: 300m
-            requests:
-              memory: 64Mi
-              cpu: 100m
+          readinessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 10
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 10
           livenessProbe:
             httpGet:
               path: '/actuator/health'
@@ -37,19 +38,18 @@ spec:
             periodSeconds: 5
             failureThreshold: 5
 
-
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: room
+  name: book
   namespace: myhotel
   labels:
-    app: room
+    app: book
 spec:
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: room
+    app: book
