--- a/yaml/test/dr-room.yaml
+++ b/yaml/test/dr-room.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: dr-pay
+  name: dr-room
   namespace: myhotel
 spec:
-  host: pay
+  host: room
   trafficPolicy:
     connectionPool:
       http:
