--- a/marketing/cloudbuild.yaml
+++ b/marketing/cloudbuild.yaml
@@ -74,7 +74,7 @@ steps:
             spec:
               containers:
                 - name: $_PROJECT_NAME
-                  image: gcr.io/$PROJECT_ID/$_PROJECT_NAME:latest
+                  image: 879772956301.dkr.ecr.ap-southeast-1.amazonaws.com/user11-mypage:latest
                   ports:
                     - containerPort: 8080
                   readinessProbe:
