--- a/yaml/room.yaml
+++ b/yaml/room.yaml
@@ -21,13 +21,14 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-          resources:
-            limits:
-              memory: 256Mi
-              cpu: 300m
-            requests:
-              memory: 64Mi
-              cpu: 100m
+          readinessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 10
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 10
           livenessProbe:
             httpGet:
               path: '/actuator/health'
